update to spring boot 3
Co-authored-by: Jim Duden <jim.duden@otto.de>